--- a/html/home.html
+++ b/html/home.html
@@ -34,7 +34,7 @@
 
 <!--  { {>core/favicon}}-->
 
-  <link rel="stylesheet" href="../css/main.css?v=4915">
+  <link rel="stylesheet" href="../css/main.css?v=1001">
 </head>
 
 <body class="page">
@@ -761,8 +761,92 @@
           <h2 class="section__title section__title--center">ЧАСТО ЗАДАВАЕМЫЕ ВОПРОСЫ</h2>
         </header>
         <div class="section__content">
-          <ul class="home-events__list">
-  
+          <ul class="home-faq__list">
+            <li>
+              <div class="faq-item js-accord">
+                <div class="faq-item__container">
+                  <div class="faq-item__header js-accord__toggle">
+                    <span class="faq-item__order">01.</span>
+                    <span class="faq-item__title">Можете ли вы осуществить доставку продукции под заказ?</span>
+                    <div class="faq-item__icon">
+                      <i class="faq-item__icon-container"></i>
+                    </div>
+                  </div>
+                  <div class="faq-item__content js-accord__body">
+                    <div class="faq-item__content-inner">
+                      <p>Партнерам СибХЦ все заказанные ингредиенты и сырье доставляет транспортная компания «Сибреф» (входит в группу компаний ЗАО «Красноярский дрожжевой завод»).  Доставка осуществляется машинами - рефрижераторами, что гарантирует соблюдение  температурного режима и  других  условий хранения товара во время транспортировки.  Сырье и ингредиенты доставляются на следующий день после заявки, иногда в день заявки (по Красноярску, в населенные пункты Красноярского края, Хакасии ). Доставка продукции производится бесплатно.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>          </li>
+            <li>
+              <div class="faq-item js-accord">
+                <div class="faq-item__container">
+                  <div class="faq-item__header js-accord__toggle">
+                    <span class="faq-item__order">02.</span>
+                    <span class="faq-item__title">На ваши мастер классы могут попасть только представители ваших клиентов?</span>
+                    <div class="faq-item__icon">
+                      <i class="faq-item__icon-container"></i>
+                    </div>
+                  </div>
+                  <div class="faq-item__content js-accord__body">
+                    <div class="faq-item__content-inner">
+                      <p>Все партнеры нашей компании получают персональные приглашения на проводимые в Демонстрационном центре СибХЦ мастер-классы. Но если технологи предприятия, не являющегося нашим клиентом, заинтересовались нашей продукцией и хотят попасть на наш мастер-класс, им нужно позвонить по телефону:+7 (391) 221 15 26. Мы будем рады их пригласить.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>          </li>
+            <li>
+              <div class="faq-item js-accord">
+                <div class="faq-item__container">
+                  <div class="faq-item__header js-accord__toggle">
+                    <span class="faq-item__order">03.</span>
+                    <span class="faq-item__title">Насколько безопасна ваша продукция, как осуществляется контроль качества?</span>
+                    <div class="faq-item__icon">
+                      <i class="faq-item__icon-container"></i>
+                    </div>
+                  </div>
+                  <div class="faq-item__content js-accord__body">
+                    <div class="faq-item__content-inner">
+                      <p>Все предлагаемая СибХЦ линейка ингредиентов и сырья проходит обязательный контроль качества и имеет соответствующие сертификаты. Наши ингредиенты позволяют производить вкусную и полезную хлебопекарную и кондитерскую продукцию и (важно) дают возможность упростить и ускорить технологический процесс. Партнерам предоставляется полное бесплатное технологическое сопровождение, т. е. от телефонных консультаций по хранению и применению продукта до участия нашего технолога в производственном процессе. Это является гарантией качества конечного продукта.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>          </li>
+            <li>
+              <div class="faq-item js-accord">
+                <div class="faq-item__container">
+                  <div class="faq-item__header js-accord__toggle">
+                    <span class="faq-item__order">04.</span>
+                    <span class="faq-item__title">Можете ли вы осуществить доставку продукции под заказ?</span>
+                    <div class="faq-item__icon">
+                      <i class="faq-item__icon-container"></i>
+                    </div>
+                  </div>
+                  <div class="faq-item__content js-accord__body">
+                    <div class="faq-item__content-inner">
+                      <p>Партнерам СибХЦ все заказанные ингредиенты и сырье доставляет транспортная компания «Сибреф» (входит в группу компаний ЗАО «Красноярский дрожжевой завод»). Доставка осуществляется машинами - рефрижераторами, что гарантирует соблюдение температурного режима и других условий хранения товара во время транспортировки. Сырье и ингредиенты доставляются на следующий день после заявки, иногда в день заявки (по Красноярску, в населенные пункты Красноярского края, Хакасии ). Доставка продукции производится бесплатно.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>          </li>
+            <li>
+              <div class="faq-item js-accord">
+                <div class="faq-item__container">
+                  <div class="faq-item__header js-accord__toggle">
+                    <span class="faq-item__order">05.</span>
+                    <span class="faq-item__title">Какие преимущества получают ваши партнеры?</span>
+                    <div class="faq-item__icon">
+                      <i class="faq-item__icon-container"></i>
+                    </div>
+                  </div>
+                  <div class="faq-item__content js-accord__body">
+                    <div class="faq-item__content-inner">
+                      <p>Наша компания работает на рынке уже более 10 лет. У нас – индивидуальный подход и гибкая маркетинговая политика. Линейка предлагаемой продукции – это более 500 наименований ингредиентов и сырья. У нас есть все, что необходимо для производства ароматного хлеба, аппетитных булочек, изысканных тортов и пирожных. В том числе – ряд эксклюзивных сырьевых продуктов из Белоруссии, Австрии, Германии, Китая. В нашем Демонстрационном центре лучшие технологи отрасли проводят бесплатные мастер-классы, где делятся секретами вкусной выпечки. Это и классическая рецептура, и новинки хлебопечения и кондитерского производства, – все, что пользуется спросом.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>          </li>
           </ul>
         </div>
       </div>
@@ -901,7 +985,7 @@
 
 </div>
 
-<script src="../js/vendors.js?v=4915" defer></script>
-  <script src="../js/main.js?v=4915" defer></script>
+<script src="../js/vendors.js?v=1001" defer></script>
+  <script src="../js/main.js?v=1001" defer></script>
 </body>
 </html>
